Add search cells inside circle or bbox. Add README
