# geocell/src/main/kotlin/org/sdato/geocell/dto/response/CellsInCircleResponse.kt
@@ -1,0 +1,8 @@
+package org.sdato.geocell.dto.response
+
+data class CellsInCircleResponse(
+	val centerLatitude: Double,
+	val centerLongitude: Double,
+	val radiusKm: Double,
+	val cells: List<CellResponse>
+)
